# fastapi-inertia-vue

./: .env.example  .gitignore  Makefile  README.md  inertia_dependency.py  main.py  pyproject.toml
app/routes/: home.py
frontend/: package-lock.json
frontend/src/: main.ts
frontend/src/Pages/: IndexPage.vue
webapp/: package.json  tailwind.config.js
