[tool.poetry]
package-mode = false
name = "fastapi-inertia-vue"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
itsdangerous = "^2.2.0"
fastapi-inertia = {extras = ["assr"], version = "^0.1.1"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"